# HPM5E_FOC_

./: README.md
board/hpm5e31_LuckyCAT/: board.c  board.h  pinmux.c
demo/1_led_blink/: CMakeLists.txt  README_zh.md
demo/1_led_blink/src/: led_blink.c
demo/2_key/: CMakeLists.txt  README_zh.md
demo/2_key/src/: key.c
demo/3_oled_sw_i2c/: CMakeLists.txt  README_zh.md
demo/3_oled_sw_i2c/src/: oled_sw_i2c.c
demo/4_ethercat_io/: README_zh.md
demo/4_ethercat_io/ecat_io/: CMakeLists.txt  ecat.c
demo/4_ethercat_io/ecat_io/SSC/: digital_io.esp  digital_io.xml
demo/4_ethercat_io/ecat_io/application/: digital_io.c
demo/5_lwip/common/single/: common.c
demo/5_lwip/lwip_iperf/: CMakeLists.txt
demo/5_lwip/lwip_iperf/inc/: lwip.h
demo/5_lwip/lwip_iperf/src/: lwip.c
demo/6_sync_output/bsp/: spi.c
demo/6_sync_output/hpm5e31_LuckyCAT_flash_xip_debug/: build.ninja  cmake_install.cmake
demo/6_sync_output/hpm5e31_LuckyCAT_flash_xip_debug/iar_embedded_workbench/: count_matching.ewp  count_matching.json
demo/6_sync_output/hpm5e31_LuckyCAT_flash_xip_debug/segger_embedded_studio/: count_matching.emProject  count_matching.emSession
demo/7_foc_demo/: CMakeLists.txt
demo/7_foc_demo/bsp/: spi.c  spi.h  vofa.c  vofa.h
demo/7_foc_demo/dgm/: anticogging.c  anticogging.h  calibration.c  calibration.h  controller.c  controller.h  encoder.c  encoder.h  foc.c  foc.h  mc_task.c  mc_task.h  pwm_curr.c  pwm_curr.h  trapTraj.h  usr_config.c  usr_config.h  util.c  util.h
demo/7_foc_demo/hpm5e31_LuckyCAT_flash_xip_debug/: CMakeCache.txt  build.ninja  compile_commands.json
demo/7_foc_demo/src/: main.c
demo/sync_output/hpm5e31_LuckyCAT_flash_xip_debug/: CMakeCache.txt  compile_commands.json
demo/sync_output/src/: pwm.c
(+48 files in other folders)
